<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A4A4A">

    <TextView
        android:id="@+id/textefector"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#0E5891"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/efector"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CANCELAREFECTOR"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button1"
        android:text="@string/cancelar"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/AutoEfector"
        app:layout_constraintTop_toBottomOf="@+id/AGREGARMANUALMENTEEFECTOR" />

    <Button
        android:id="@+id/GUARDAREFECTOR"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button1"
        android:text="@string/guardar"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toBottomOf="@+id/CANCELAREFECTOR"
        app:layout_constraintEnd_toEndOf="@+id/AutoEfector"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/CANCELAREFECTOR"
        app:layout_constraintTop_toTopOf="@+id/CANCELAREFECTOR"
        app:layout_constraintVertical_bias="0.0" />

    <AutoCompleteTextView
        android:id="@+id/AutoEfector"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_1"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/buscar_efector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textefector" />

    <TextView
        android:id="@+id/AGREGARMANUALMENTEEFECTOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/agregar_efector_manualmente"
        android:textColor="@color/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AutoEfector" />

</androidx.constraintlayout.widget.ConstraintLayout>